chamber/styles/base.css
@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

:root {
  --primary-color: #012a4a;
  --secondary-color: #013a63;
  --accent1-color: #01497c;
  --accent2-color: #014f86;

  --heading-font: "Roboto", serif;
  --paragraph-font: "Roboto Flex", serif;

  --nav-backgroud-color: var(--primary-color);
  --nav-link-color: #ffffff;
  --nav-hover-link-color: var(--nav-link-color);
  --nav-hover-background-color: var(--accent2-color);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Roboto", sans-serif;
  background-color: var(--primary-color);

  margin: 0 auto;
  position: relative;
  display: flex;
  flex-direction: column;

  /* border: 2px solid var(--primary-color); */

  align-content: center;
}

h1,
.brand h2 {
  text-align: center;
  font-family: var(--heading-font);
  font-weight: bold;
}

/* mobile **************************/
header {
  transition: all 0.5s;
  z-index: 997;
  padding: 15px 0;
  position: fixed;

  display: flex;
  align-items: center;
  flex-wrap: wrap;

  background-color: #0f3f5f;
  opacity: 0.8;
  padding: 1rem;
  width: 100%;
  color: #ffffff;
  justify-content: space-between;

  border: 1px solid rgba(0, 0, 0, 0.1);
}

header,
main {
  margin: 0 auto;

  height: auto;
}
main {
  width: 100%;
  padding: 130px 0;
  padding-bottom: 30px;
  overflow: hidden;
  display: block;
}

section {
  margin: 0 auto;
  padding: 20px;
}

h1 {
  font-size: 2rem;
}

#menu {
  display: block;
  font-size: 2rem;
  font-weight: 700;
  text-decoration: none;
  padding: 0.5rem 0.75rem;
  background-color: #eee;
  color: #000;
}
#menu::before {
  content: "☰";
}

#menu.open::before {
  content: "X";
}

nav {
  position: relative;
  display: flex;

  width: 50%;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
}
nav ul {
  list-style-type: none;
}

.navigation {
  list-style: none;
  width: 90%;
  margin: 0 auto;
}

.navigation li {
  display: none;
}

.navigation {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
  transition: 0.5s;
}

.navigation a {
  text-decoration: none;
  color: #fff;
  font-weight: 400;
  font-size: clamp(1rem, 2vmin, 1.5rem);
}

.navigation a:hover,
navigation a:active {
  color: white;
  transform: scale(1.1);
  background-color: var(--primary-color);
}

ul .active {
  background-color: var(--primary-color);
  color: yellow;
}

h2 {
  font-size: 1.8rem;
  color: var(--primary-color);
  text-align: center;
  margin: 1rem;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
  background-color: #01111d;
  font-family: "Times New Roman", Times, serif;
  font-weight: bold;
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
  display: block;
}

section {
  background-color: rgb(227, 238, 234);
}
.card-header {
  background-color: var(--primary-color);
}
#hero img {
  height: 300px;
  width: 400px;
}
.logo {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 10px;
}

section h3 {
  margin-bottom: 10px;
}

img {
  height: auto;
  max-width: 100%;
}

.open li {
  display: block;
}

#hero .btn-get-started {
  font-family: "Jost", sans-serif;
  font-weight: 500;
  font-size: 20px;
  letter-spacing: 1px;
  text-decoration: none;
  display: inline-block;
  padding: 10px 28px 11px 28px;
  border-radius: 50px;
  transition: 0.5s;
  margin: 10px 0 0 60px;
  color: #fff;
  background: #47b2e4;
}
#hero h2,
h2 {
  margin: 0 0 10px 0;
  font-size: 38px;
  font-weight: 700;
  line-height: 56px;
  color: #fff;
}

#hero h3 {
  font-size: 15px;
  font-weight: 100;
  color: #fff;
  margin-bottom: 50px;
}

.row {
  display: grid;
  grid-template-columns: auto auto;
  justify-content: center;
  align-items: center;
}

.membership {
  display: grid;
  grid-template-columns: 253px 253px 253px 253px 253px;
  justify-content: center;
  grid-gap: 10px;
  align-items: center;
}

.membership h3 {
  text-align: center;
}

.section-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  align-content: center;
}
.brand {
  display: flex;
  flex-direction: column;
  align-items: baseline;

  align-content: baseline;
}

.card-container {
  width: 100%;
  display: grid;
  padding: 10px;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  gap: 5px; /* Adjust the gap as needed */
  justify-content: center;
  align-items: center;
  height: auto;
}

.card {
  background-color: #fff;
  border-radius: 10px;

  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  width: 95%;
  height: 100%;
  padding: 10px;
}

.card-logo {
  width: 180px;
  height: 180px;
  object-fit: cover;
  margin-bottom: 15px;
}

.card-details {
  display: flex;
  flex-direction: column;
}

.card-main {
  display: flex;

  justify-content: space-between;
}
.card-content {
  display: flex;
  flex-direction: column;

  justify-content: space-between;
}

.card-title {
  font-size: 20px;
  color: var(--primary-color);
  margin-bottom: 5px;
}

.card-logo1 {
  width: 180px;
  height: 180px;
  align-self: center;
  object-fit: cover;
  margin-bottom: 15px;
}

.card-tagline {
  font-style: italic;
  margin-bottom: 10px;
}

.card-description {
  font-size: 14px;
  line-height: 1.5;
  margin-bottom: 15px;
}
/* ... */

